syntax = "proto3";

package grpc;

// protoc --go_out=plugins=grpc:./../internal/grpc api.proto

import "google/protobuf/timestamp.proto";

message Event {
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
}

message SimpleResponse {
    string result = 1;
}

message EventListResponse {
    repeated Event events = 1;
}

message CreateEventRequest {
    string name = 1;
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
}

message UpdateEventRequest {
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
}

message DeleteEventRequest {
    int32 id = 1;
}

message Nothing {}

service Service {
    rpc CreateEvent(CreateEventRequest) returns (SimpleResponse) {};
    rpc UpdateEvent(UpdateEventRequest) returns (SimpleResponse) {};
    rpc DeleteEvent(DeleteEventRequest) returns (SimpleResponse) {};
    rpc GetEventsForDay(Nothing) returns (EventListResponse) {};
    rpc GetEventsForWeek(Nothing) returns (EventListResponse) {};
    rpc GetEventsForMonth(Nothing) returns (EventListResponse) {};
}